--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyMbU9X0OEyQJ8AdogXSVDws",
+      "authorship_tag": "ABX9TyOV2SIq4OJ97HDJmySVJ2y1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,6 +65,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Reading data csv files\n",
         "nba_stats = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/2022-23_NBA_Player_Stats.csv', encoding = 'latin', sep=';')\n",
         "homestate = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/NBA Players by State.csv')\n",
         "homestate = homestate.loc[:, ~homestate.columns.str.contains('^Unnamed')]\n",
