--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyOV2SIq4OJ97HDJmySVJ2y1",
+      "authorship_tag": "ABX9TyM7jX1IaDKLrsKvOs+bahGb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,6 +67,7 @@
       "source": [
         "#Reading data csv files\n",
         "nba_stats = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/2022-23_NBA_Player_Stats.csv', encoding = 'latin', sep=';')\n",
+        "#Reading homestate csv file\n",
         "homestate = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/NBA Players by State.csv')\n",
         "homestate = homestate.loc[:, ~homestate.columns.str.contains('^Unnamed')]\n",
         "homestate.drop(homestate.columns.difference(['Player','City', 'State']), 1, inplace=True)\n",
