--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyM9ZIW3HEuxYSSTMPoPFYEJ",
+      "authorship_tag": "ABX9TyO5GzrwfWxkiwgWMR/fDQnh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,7 @@
         "homestate = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/NBA Players by State.csv')\n",
         "#Removing empty columns\n",
         "homestate = homestate.loc[:, ~homestate.columns.str.contains('^Unnamed')]\n",
+        "#Drop unneeded columns\n",
         "homestate.drop(homestate.columns.difference(['Player','City', 'State']), 1, inplace=True)\n",
         "nba_stats = pd.merge(nba_stats, homestate, on='Player')\n",
         "\n",
