--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyN5wWKDMAWwzDddZZMjp02J",
+      "authorship_tag": "ABX9TyMIsIO+KtSz9sDshckRAk1U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "LDnBdeQ-OIBQ"
       },
@@ -76,6 +76,7 @@
         "#Merge the two datasets\n",
         "nba_stats = pd.merge(nba_stats, homestate, on='Player')\n",
         "\n",
+        "#Display first 10 rows of dataset\n",
         "nba_stats.head(10)"
       ],
       "metadata": {
@@ -512,7 +513,7 @@
         "id": "STJRdKYaXaG8",
         "outputId": "2ffbd0d8-40f3-4bc5-f3b9-96996a19dcb3"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
