--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyNFu5cYzQbevSOP3UNrh40M",
+      "authorship_tag": "ABX9TyPKoWTk4uBx8/cHBYLfatwQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "LDnBdeQ-OIBQ"
       },
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "2wUCb27qX7VE"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
         "id": "HkzpNuxSPVBE",
         "outputId": "db6b68c5-0b2f-4388-bf04-c45a5e78d4f2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,6 +506,7 @@
       "cell_type": "code",
       "source": [
         "state_counts = {}\n",
+        "#Create a dictionary of each state and the number of NBA players born there\n",
         "for state in nba_stats['State']:\n",
         "    state_counts[state] = state_counts.get(state, 0) + 1\n",
         "print(state_counts)"
@@ -517,7 +518,7 @@
         "id": "4jA2ZTev7GLn",
         "outputId": "241139a7-13ff-4527-ecce-a51808ac56eb"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +538,7 @@
       "metadata": {
         "id": "cT_09XZ87U53"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +554,7 @@
         "id": "Ntq2y96a753e",
         "outputId": "c1e743db-f986-42e8-b058-a40b47f8d488"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +582,7 @@
         "id": "STJRdKYaXaG8",
         "outputId": "b4c581b8-5600-477a-d0d3-d035df7cf351"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
