--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyPKoWTk4uBx8/cHBYLfatwQ",
+      "authorship_tag": "ABX9TyOIZI+kQxsd4w8j0zb2+92G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -532,6 +532,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Convert all keys to a list\n",
         "states = list(state_counts.keys())\n",
         "counts = list(state_counts.values())"
       ],
