--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyOIZI+kQxsd4w8j0zb2+92G",
+      "authorship_tag": "ABX9TyMCKfk1n7PUi+2J6kO85kZH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -571,6 +571,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12, 8))\n",
+        "#Plot the heatmap\n",
         "us_states.plot(column='NBA_Players', cmap='YlGnBu', legend=True, missing_kwds={'color': 'lightgrey'}, edgecolor='black')\n",
         "plt.title('NBA Players Homestates Heatmap - USA')\n",
         "plt.show()"
