--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyMCKfk1n7PUi+2J6kO85kZH",
+      "authorship_tag": "ABX9TyOg5s4Xjr+DYp30zevC7u+m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
       },
       "outputs": [],
       "source": [
+        "#Import necessary modules\n",
         "import pandas as pd\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
