--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyOg5s4Xjr+DYp30zevC7u+m",
+      "authorship_tag": "ABX9TyMV3roe0FJ+06SmL6Clxbvf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -546,6 +546,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Read map file\n",
         "us_states = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
         "us_states['NBA_Players'] = us_states['iso_a3'].map(state_counts)"
       ],
