--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyMV3roe0FJ+06SmL6Clxbvf",
+      "authorship_tag": "ABX9TyPuFUIqOkw+QG6ISNO+RUqa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -576,6 +576,7 @@
         "#Plot the heatmap\n",
         "us_states.plot(column='NBA_Players', cmap='YlGnBu', legend=True, missing_kwds={'color': 'lightgrey'}, edgecolor='black')\n",
         "plt.title('NBA Players Homestates Heatmap - USA')\n",
+        "#Show plot\n",
         "plt.show()"
       ],
       "metadata": {
