--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyPuFUIqOkw+QG6ISNO+RUqa",
+      "authorship_tag": "ABX9TyNPC8RyyfvL/KAfAqjnQTaV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,6 +50,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Get map data\n",
         "data = {\n",
         "    'State': ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado'],\n",
         "    'Latitude': [32.806671, 61.370716, 33.729759, 34.969704, 36.116203, 39.059811],\n",
