--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyNPC8RyyfvL/KAfAqjnQTaV",
+      "authorship_tag": "ABX9TyN1DS8RJ0jLi+/DqJI8ULdX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -576,6 +576,7 @@
         "plt.figure(figsize=(12, 8))\n",
         "#Plot the heatmap\n",
         "us_states.plot(column='NBA_Players', cmap='YlGnBu', legend=True, missing_kwds={'color': 'lightgrey'}, edgecolor='black')\n",
+        "#Give title to plot\n",
         "plt.title('NBA Players Homestates Heatmap - USA')\n",
         "#Show plot\n",
         "plt.show()"
