--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyN1DS8RJ0jLi+/DqJI8ULdX",
+      "authorship_tag": "ABX9TyMmQIdeTq+ac2OXbH7H+3m7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,7 @@
         "    'Value': [5, 10, 15, 20, 25, 30]\n",
         "}\n",
         "\n",
+        "#Create dataframe out of dictionary\n",
         "states = pd.DataFrame(data)\n"
       ],
       "metadata": {
