--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyMmQIdeTq+ac2OXbH7H+3m7",
+      "authorship_tag": "ABX9TyO+KDBSlg8gk60CXnA7hDhA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -537,6 +537,7 @@
       "source": [
         "#Convert all keys to a list\n",
         "states = list(state_counts.keys())\n",
+        "#Convert all values to a list\n",
         "counts = list(state_counts.values())"
       ],
       "metadata": {
