--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyO+KDBSlg8gk60CXnA7hDhA",
+      "authorship_tag": "ABX9TyMuhZsXvm8xydGSoPBBXhg2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "from sklearn.preprocessing import OneHotEncoder\n",
         "import seaborn as sns\n",
         "import geopandas as gpd\n",
-        "\n",
+        "#Import plotting modules\n",
         "import matplotlib.pyplot as plt\n",
         "from matplotlib.cm import ScalarMappable\n",
         "from matplotlib.colors import Normalize"
