--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyMuhZsXvm8xydGSoPBBXhg2",
+      "authorship_tag": "ABX9TyOz/wP3IgIQjV6ZtKDmRi/d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -512,6 +512,7 @@
         "#Create a dictionary of each state and the number of NBA players born there\n",
         "for state in nba_stats['State']:\n",
         "    state_counts[state] = state_counts.get(state, 0) + 1\n",
+        "#Print dictionary\n",
         "print(state_counts)"
       ],
       "metadata": {
