--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyOz/wP3IgIQjV6ZtKDmRi/d",
+      "authorship_tag": "ABX9TyN0O2CMWat2p7QI1DuQiIS8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -536,7 +536,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Convert all keys to a list\n",
+        "#Convert all keys into a list\n",
         "states = list(state_counts.keys())\n",
         "#Convert all values to a list\n",
         "counts = list(state_counts.values())"
