--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyN0O2CMWat2p7QI1DuQiIS8",
+      "authorship_tag": "ABX9TyMBeI178Ppl+3vnCYdYfYdm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -538,7 +538,7 @@
       "source": [
         "#Convert all keys into a list\n",
         "states = list(state_counts.keys())\n",
-        "#Convert all values to a list\n",
+        "#Convert all values into a list\n",
         "counts = list(state_counts.values())"
       ],
       "metadata": {
