--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyMBeI178Ppl+3vnCYdYfYdm",
+      "authorship_tag": "ABX9TyMtvWpPIeKaKqev4HmEiADx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -577,7 +577,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12, 8))\n",
-        "#Plot the heatmap\n",
+        "#Plot the heatmap and set design\n",
         "us_states.plot(column='NBA_Players', cmap='YlGnBu', legend=True, missing_kwds={'color': 'lightgrey'}, edgecolor='black')\n",
         "#Give title to plot\n",
         "plt.title('NBA Players Homestates Heatmap - USA')\n",
