--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyMtvWpPIeKaKqev4HmEiADx",
+      "authorship_tag": "ABX9TyNajeICkWZQxn9yzvB8b6vh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "    'Value': [5, 10, 15, 20, 25, 30]\n",
         "}\n",
         "\n",
-        "#Create dataframe out of dictionary\n",
+        "#Create Pandas dataframe out of dictionary\n",
         "states = pd.DataFrame(data)\n"
       ],
       "metadata": {
