--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyMsevsldN0wkARnBgEc600M",
+      "authorship_tag": "ABX9TyNjG4j4qadn/oNrinymxrDi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Reading data csv files with stat\n",
+        "#Reading data csv files with stats\n",
         "nba_stats = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/2022-23_NBA_Player_Stats.csv', encoding = 'latin', sep=';')\n",
         "#Reading homestate csv file\n",
         "homestate = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/NBA Players by State.csv')\n",
