--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyNjG4j4qadn/oNrinymxrDi",
+      "authorship_tag": "ABX9TyOLFJwX+d5uh5bcYS3tavXu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "homestate = homestate.loc[:, ~homestate.columns.str.contains('^Unnamed')]\n",
         "#Drop unneeded columns\n",
         "homestate.drop(homestate.columns.difference(['Player','City', 'State']), 1, inplace=True)\n",
-        "#Merge the two datasets\n",
+        "#Merge the two datasets into one dataset\n",
         "nba_stats = pd.merge(nba_stats, homestate, on='Player')\n",
         "\n",
         "#Display first 10 rows of dataset\n",
