--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyNDJQm71OS8HatbbjxrqjsR",
+      "authorship_tag": "ABX9TyOLFJwX+d5uh5bcYS3tavXu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
         "homestate = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/NBA Players by State.csv')\n",
         "#Removing empty columns\n",
         "homestate = homestate.loc[:, ~homestate.columns.str.contains('^Unnamed')]\n",
-        "#Drop unneeded column\n",
+        "#Drop unneeded columns\n",
         "homestate.drop(homestate.columns.difference(['Player','City', 'State']), 1, inplace=True)\n",
         "#Merge the two datasets into one dataset\n",
         "nba_stats = pd.merge(nba_stats, homestate, on='Player')\n",
