--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyOLFJwX+d5uh5bcYS3tavXu",
+      "authorship_tag": "ABX9TyOpaTOzTfcadnNo0CXj5fPw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -509,7 +509,7 @@
       "cell_type": "code",
       "source": [
         "state_counts = {}\n",
-        "#Create a dictionary of each state and the number of NBA players born there\n",
+        "#Creates a dictionary of each state and the number of NBA players born there\n",
         "for state in nba_stats['State']:\n",
         "    state_counts[state] = state_counts.get(state, 0) + 1\n",
         "#Print dictionary\n",
