--- a/NBA_Homestate_Analysis.ipynb
+++ b/NBA_Homestate_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1zppAW34D70hYoIbrCWkXUbxnkSk-QPXR",
-      "authorship_tag": "ABX9TyOpaTOzTfcadnNo0CXj5fPw",
+      "authorship_tag": "ABX9TyO6LpMUkzJMO2t9qB/SLW69",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
       "source": [
         "#Reading data csv files with stats\n",
         "nba_stats = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/2022-23_NBA_Player_Stats.csv', encoding = 'latin', sep=';')\n",
-        "#Reading homestate csv file\n",
+        "#Reading the homestate csv file\n",
         "homestate = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Data/NBA Players by State.csv')\n",
         "#Removing empty columns\n",
         "homestate = homestate.loc[:, ~homestate.columns.str.contains('^Unnamed')]\n",
